Fix silly italic-bold mixup

--- a/template.html
+++ b/template.html
@@ -106,17 +106,17 @@
 			}
 			h4 {
 				color: var(--bolder-color);
-				font-size: 11pt;
+				font-size: 10pt;
 				font-style: italic;
 			}
 			h5 {
 				color: var(--bold-color);
-				font-size: 11pt;
+				font-size: 10pt;
 				font-style: italic;
 			}
 			h6 {
 				color: var(--secondary-color);
-				font-size: 11pt;
+				font-size: 10pt;
 			}
 			ol,ul {
 				margin: 0;
@@ -272,14 +272,14 @@
 		</h3>
 		<ul>
 			<li>
-				<em>Migrated Googler Calandars from Oracle Calendar to Google Calendar</em>
+				<strong>Migrated Googler Calandars from Oracle Calendar to Google Calendar</strong>
 				<ul>
 					<li>In advance of Google's initial release of Google Calendar for enterprise and to aid with internal dogfooding, I wrote all the tools to export all employee calendar data from Oracle Calandar and import it into Google Calendar.
 					</li>
 				</ul>
 			</li>
 			<li>
-				<em>Global logs visualization</em>
+				<strong>Global logs visualization</strong>
 				<ul>
 					<li>Used a combination of Sawzall and Python to analyze and geolocate logs data from internal infrastructure and visualize the magnitude of internal traffic onto Google Earth using dynamically rendered KML.
 					</li>
