--- a/template.html
+++ b/template.html
@@ -163,206 +163,120 @@
 		<title></title>
 	</head>
 	<body>
-		<h1 id="aprotim-sanyal">
-			Aprotim Sanyal
-		</h1>
-		<p>
-			<a href="mailto:aprotim@aprotim.com">aprotim@aprotim.com</a><br>
-			(310) 243-6230
-		</p>
-		<h2 id="experience">
-			Experience
-		</h2>
-		<h3 id="google-inc---site-reliability-engineer---february-2008---present">
-			Google, Inc. - <em>Site Reliability Engineer - February 2008 - Present</em>
-		</h3>
-		<h4 id="backups-tech-lead---enterprise-data-storage---2017-present">
-			Backups Tech Lead - Enterprise Data Storage - (2017-Present)
-		</h4>
-		<ul>
-			<li>
-				<strong>Designed Google’s next gen internal backup tool</strong> from the ground up.
-				<ul>
-					<li>Built on <strong>Google Cloud Platform</strong> to manage provisioning of storage, storage class migration, data retention, authentication/authorization, key escrow, and encryption.
-					</li>
-					<li>Made setup and restore <strong>self-service</strong>, leading to happier users and less toil on the team.
-					</li>
-				</ul>
-			</li>
-			<li>
-				<strong>Set technical direction</strong> for a team of between <strong>2 and 6 engineers</strong> to build, test, and rollout our new service.
-			</li>
-			<li>
-				<strong>Managed inter-team coordination</strong> to:
-				<ul>
-					<li>
-						<strong>Push for upstream features</strong> in Google Cloud Storage by speccing requirements, coordinating changes, and finding headcount from internal initiatives.
-					</li>
-					<li>
-						<strong>Capture user requirements</strong> by working closely with alpha-/beta-testers to capture pain points, hard requirements, and wishlist features.
-					</li>
-					<li>
-						<strong>Conform to security best practices</strong>, seeking input from security team and building out features as needed to help users avoid security pitfalls.
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<h4 id="cssi-lead-instructor---summer-20182019">
-			CSSI Lead Instructor - Summer 2018/2019
-		</h4>
-		<ul>
-			<li>
-				<strong>Taught three week intensive course in programming</strong> to rising college students.
-				<ul>
-					<li>Taught 30+ students, primarily from backgrounds underrepresented in tech. XX% of students reported more likely to pursue a course of study in CS, and XX% reported increased confidence in their technical ability
-					</li>
-					<li>Planned and delivered lessons on both technical topics and life skills.
-					</li>
-					<li>Recruited a diverse team of module instructors from the other engineers in the office, so that the students would see themselves reflected in their instructors.
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<h4 id="enterprise-data-storage---individual-contributor---2014---present">
-			Enterprise Data Storage - Individual Contributor - (2014 - Present)
-		</h4>
-		<ul>
-			<li>Migrated XX,000 long-term storage images from deprecated tape system onto cloud storage, including integrity checking and modifying the in-house-built backups management system.
-			</li>
-			<li>Worked on tooling to manage a fleet of several hundred NetApp filers, and providing more SRE-like interfaces for them. (In our experience, the tooling for NetApps was designed for pets, we needed cattle.)
-			</li>
-		</ul>
-		<h4 id="enterprise-monitoring---individual-contributor">
-			Enterprise Monitoring - Individual Contributor
-		</h4>
-		<ul>
-			<li>Managed full monitoring infrastructure for Google’s internal (“corp”) systems. Because monitoring was a hard dependency of critical infrastructure like internal DNS, DHCP, and auth, this required an incredibly resilient system, adapting tooling designed for the Google production stack to run on standard Linux servers on the corporate network, both in data centers and offices.
-			</li>
-			<li>Replaced previous, high-toil on-prem system management with automatic workload scheduling. (Think proto-containerization on Linux VMs with specialized workloads.)
-			</li>
-			<li>Managed project to increase isolation between different customer’s monitoring by sharding workloads that were combined into a single physical server onto smaller, where scheduling could be performed based on configured resource constraints.
-			</li>
-			<li>Established a set of standard system configuration best practices applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.
-			</li>
-		</ul>
-		<h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom">
-			Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com
-		</h4>
-		<ul>
-			<li>Managed all domain-wide policies for Google's own GSuite domain, including:
-				<ul>
-					<li>User status/password sync from the various systems of record.
-					</li>
-					<li>Synchronization of IP whitelist based on internal network configuration.
-					</li>
-					<li>Group/policy synchronization.
-					</li>
-				</ul>
-			</li>
-			<li>Set policy for access to former user data, in line with established privacy/authorization practices within the company.
-			</li>
-			<li>Maintained and improved internal tool providing delagated, logged administrative access to internal helpdesk, including managing quota, and access to orphaned data.
-			</li>
-			<li>Met in person with various GSuite teams (Calendar, Admin Console, Gmail, Docs, etc.) PMs to provide feedback on missing features and requirements for enterprise use cases, and helped steer roadmaps.
-			</li>
-		</ul>
-		<h4 id="single-sign-on-sre-tech-lead-team-of-1">
-			Single Sign-On SRE "Tech Lead" (Team of 1)
-		</h4>
-		<ul>
-			<li>Provided SRE support for Google's in-house SSO system, including monitoring, alerting, and deployment support.
-			</li>
-		</ul>
-		<h3 id="google-inc---sysops-intern---june-2006---august-2006">
-			Google Inc. - <em>Sysops Intern</em> - June 2006 - August 2006
-		</h3>
-		<ul>
-			<li>
-				<strong>Migrated Googler Calandars from Oracle Calendar to Google Calendar</strong>
-				<ul>
-					<li>In advance of Google's initial release of Google Calendar for enterprise and to aid with internal dogfooding, I wrote all the tools to export all employee calendar data from Oracle Calandar and import it into Google Calendar.
-					</li>
-				</ul>
-			</li>
-			<li>
-				<strong>Global logs visualization</strong>
-				<ul>
-					<li>Used a combination of Sawzall and Python to analyze and geolocate logs data from internal infrastructure and visualize the magnitude of internal traffic onto Google Earth using dynamically rendered KML.
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<h2 id="skills">
-			Skills
-		</h2>
-		<h4 id="expert-in">
-			Expert in:
-		</h4>
-		<ul>
-			<li>Languages (computer): <strong>Python</strong>, <strong>Bash</strong> (sad, but true)
-			</li>
-			<li>Languages (human): <strong>English</strong> (written and spoken!)
-			</li>
-			<li>Large scale system management:
-				<ul>
-					<li>
-						<strong>Large-Scale System Design</strong>
-					</li>
-					<li>
-						<strong>Monitoring/alerting</strong>
-					</li>
-					<li>
-						<strong>Reliable deployment</strong>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<strong>Linux</strong> system administration
-			</li>
-		</ul>
-		<h4 id="enthusiastic-dilettante-in">
-			Enthusiastic dilettante in:
-		</h4>
-		<ul>
-			<li>Languages (computer): <strong>JavaScript/ECMAScript</strong>, <strong>Node.js</strong>, <strong>Go</strong>
-			</li>
-			<li>Languages (human): <strong>Spanish</strong>
-			</li>
-			<li>
-				<strong>Teaching</strong> peers and young students.
-			</li>
-		</ul>
-		<h4 id="its-been-a-while-but-i-could-probably-pick-it-back-up">
-			It’s been a while, but I could probably pick it back up:
-		</h4>
-		<ul>
-			<li>Languages (computer): <strong>C</strong>, <strong>C++</strong>, <strong>Java</strong>, <strong>Ruby</strong> (on or off Rails), <strong>Perl</strong>, <strong>Lisp</strong>
-			</li>
-			<li>Languages (human): <strong>French</strong>, <strong>Hindi</strong>, <strong>Bengali</strong>
-			</li>
-		</ul>
-		<h2 id="education">
-			Education
-		</h2>
-		<h3 id="university-of-virginia-dept-of-computer-science">
-			University of Virginia, Dept of Computer Science
-		</h3>
-		<h4 id="ms-in-computer-science---jan-2008">
-			M.S. in Computer Science - Jan 2008
-		</h4>
-		<p>
-			Thesis: <strong>“Color CT: Capturing Energy Dependence in CT Scans”</strong> Publications: Williams, Daniel, et al. <strong>"A cross-layer approach to heterogeneity and reliability."</strong> <em>Proceedings of the 7th IEEE/ACM international conference on Formal Methods and Models for Codesign.</em> IEEE Press, 2009.
-		</p>
-		<h3 id="university-of-virginia-school-of-engineering--applied-science">
-			University of Virginia, School of Engineering & Applied Science
-		</h3>
-		<h4 id="bs-with-honors-in-computer-science---may-2005br-also-completed-requirements-for-ba-in-cognitive-science">
-			B.S. with Honors in Computer Science - May 2005<br>
-			Also completed requirements for B.A. in Cognitive Science
-		</h4>
-		<p>
-			Thesis: <strong>“NJTopol: Adding Topology to Parallelized Neural Simulation”</strong> Publications: Levy, William B., et al. <strong>"The formation of neural codes in the hippocampus: trace conditioning as a prototypical paradigm for studying the random recoding hypothesis."</strong> <em>Biological cybernetics</em> 92.6 (2005): 409-426.
-		</p>
+<h1 id="aprotim-sanyal">Aprotim Sanyal</h1>
+<p><a href="mailto:jobs@aprotim.com">jobs@aprotim.com</a><br>(310) 243-6230</p>
+<h2 id="employment">Employment</h2>
+<h3 id="google-inc---site-reliability-engineer---february-2008---present">Google, Inc. - <em>Site Reliability Engineer - February 2008 - Present</em></h3>
+<h4 id="backups-tech-lead---enterprise-data-storage---2017-present">Backups Tech Lead - Enterprise Data Storage - (2017-Present)</h4>
+<ul>
+<li><strong>Designed Google’s next gen internal backup tool</strong> from the ground up.<ul>
+<li>Built on <strong>Google Cloud Platform</strong> to manage provisioning of storage, storage class migration, data retention, authentication/authorization, key escrow, and encryption.</li>
+<li>Made setup and restore <strong>self-service</strong>, leading to happier users and less toil on the team.</li>
+</ul>
+</li>
+<li><strong>Set technical direction</strong> for a team of between <strong>2 and 6 engineers</strong> to build, test, and roll out our new service.</li>
+<li><strong>Managed coordination with other teams</strong> to:<ul>
+<li><strong>Push for upstream features</strong> in Google Cloud Storage by speccing requirements, coordinating changes, and finding headcount from internal initiatives.</li>
+<li><strong>Capture user requirements</strong> by working closely with alpha-/beta-testers to capture pain points, hard requirements, and wishlist features.</li>
+<li><strong>Conform to security best practices</strong>, seeking input from security team and building out features as needed to help users avoid security pitfalls.</li>
+</ul>
+</li>
+</ul>
+<h4 id="enterprise-data-storage---individual-contributor---2014---present">Enterprise Data Storage - Individual Contributor - (2014 - Present)</h4>
+<ul>
+<li>Migrated XX,000 long-term storage images from deprecated tape system onto cloud storage, including integrity checking and modifying the in-house-built backups management system.</li>
+<li>Worked on tooling to manage a fleet of several hundred NetApp filers, providing more SRE-like control planes. (In our experience, the tooling for NetApps was designed for pets, we needed cattle.)</li>
+</ul>
+<h4 id="enterprise-monitoring---individual-contributor">Enterprise Monitoring - Individual Contributor</h4>
+<ul>
+<li>Managed full monitoring infrastructure for Google’s internal (“corp”) systems. Because monitoring was a hard dependency of critical infrastructure like internal DNS, DHCP, and auth, this required an incredibly resilient system, adapting tooling designed for the Google production stack to run on standard Linux servers on the corporate network, both in data centers and offices.</li>
+<li>Replaced previous, high-toil on-prem system management with automatic workload scheduling. (Think proto-containerization on Linux VMs with specialized workloads.)</li>
+<li>Managed project to increase isolation between different customers&#39; monitoring by sharding workloads that were combined into a single physical server onto smaller virtual machines, where scheduling could be performed based on configured resource constraints.</li>
+<li>Established a set of standard system configuration best practices applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.</li>
+</ul>
+<h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom">Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com</h4>
+<ul>
+<li>Managed all domain-wide policies for Google&#39;s own GSuite domain, including:<ul>
+<li>User status/password sync from the various systems of record.</li>
+<li>Synchronization of IP whitelist based on internal network configuration.</li>
+<li>Group/policy synchronization.</li>
+</ul>
+</li>
+<li>Set policy for access to former user data, in line with established privacy/authorization practices within the company.</li>
+<li>Maintained and improved internal tool providing delegated, logged administrative access to internal helpdesk, including managing quota and access to orphaned data.</li>
+<li>Met in person with various GSuite teams (Calendar, Admin Console, Gmail, Docs, etc.) PMs to provide feedback on missing features and requirements for enterprise use cases, and helped steer roadmaps.</li>
+<li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature&#39;s roll out. For this work, I received an <strong>OC Award Honorable Mention</strong>.</li>
+</ul>
+<h4 id="single-sign-on-sre-tech-lead-team-of-1">Single Sign-On SRE &quot;Tech Lead&quot; (Team of 1)</h4>
+<ul>
+<li>Provided SRE support for Google&#39;s in-house SSO system, including monitoring, alerting, and deployment support.</li>
+</ul>
+<h3 id="google-inc---sysops-intern---june-2006---august-2006">Google Inc. - <em>Sysops Intern</em> - June 2006 - August 2006</h3>
+<ul>
+<li><strong>Migrated Googler Calendars from Oracle Calendar to Google Calendar</strong><ul>
+<li>In advance of Google&#39;s initial release of Google Calendar for enterprise and to aid with internal dogfooding, I wrote all the tools to export all employee calendar data from Oracle Calendar and import it into Google Calendar.</li>
+</ul>
+</li>
+<li><strong>Global logs visualization</strong><ul>
+<li>Used a combination of Sawzall and Python to analyze and geolocate logs data from internal infrastructure and visualize the magnitude of internal traffic onto Google Earth using dynamically rendered KML.</li>
+</ul>
+</li>
+</ul>
+<h2 id="volunteeringservice">Volunteering/Service</h2>
+<h3 id="cssigoogle">CSSI@Google</h3>
+<p><a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive course in programming for rising college freshman the summer before they start college. Students are primarily from groups underrepresented in tech. In the last week of the course, students design, implement, and present their own web app.</p>
+<h4 id="co-lead-instructor---summer-20182019">Co-Lead Instructor - Summer 2018/2019</h4>
+<ul>
+<li><strong>Ran Google L.A.&#39;s CSSI instruction</strong>, along with my co-lead.<ul>
+<li><strong>Planned and delivered lessons</strong> on both technical topics and life skills, including detailed instruction on Python, ad hoc breakout sessions, growth vs. fixed mindset, reviews, and custom labs beyond the standard CSSI curriculum to adapt to the students&#39; needs.</li>
+<li><strong>Recruited a diverse team of module instructors and TAs</strong> from the other engineers in the office, so that the students would see themselves reflected in their instructors.</li>
+<li><strong>Led instructional/pedagogical training</strong> for module instructors and TAs.</li>
+<li>Provided <strong>personalized mentorship</strong> to students.</li>
+<li>Students gave me <strong>4.9/5.0 rating</strong> as an instructor in the end-of-program survey.</li>
+</ul>
+</li>
+<li>In 2019, <strong>100% of our students reported seeing themselves graduating with a CS degree</strong>, <strong>91% reported increased sense of belonging</strong> in the field, and <strong>85% said the program helped prepare them for college</strong>.</li>
+</ul>
+<h4 id="python-module-instructor---summer-2017">Python Module Instructor - Summer 2017</h4>
+<ul>
+<li><strong>Planned and taught</strong> two full-day (9am-6pm) lessons on Python to the students, as well TAing frequently.</li>
+</ul>
+<h3 id="meals-on-wheels">Meals on Wheels</h3>
+<h4 id="delivery-driver-2011-2018">Delivery Driver 2011-2018</h4>
+<ul>
+<li>Delivered meals to those with mobility once every seven weeks.</li>
+</ul>
+<h2 id="skills">Skills</h2>
+<h4 id="expert-in">Expert in:</h4>
+<ul>
+<li>Languages (computer): <strong>Python</strong>, <strong>Bash</strong> (sad, but true)</li>
+<li>Languages (human): <strong>English</strong> (written and spoken!)</li>
+<li>Large-scale system management:<ul>
+<li><strong>Large-Scale System Design</strong></li>
+<li><strong>Monitoring/alerting</strong></li>
+<li><strong>Reliable deployment</strong></li>
+</ul>
+</li>
+<li><strong>Linux</strong> system administration</li>
+</ul>
+<h4 id="enthusiastic-dilettante-in">Enthusiastic dilettante in:</h4>
+<ul>
+<li>Languages (computer): <strong>JavaScript/ECMAScript</strong>, <strong>Node.js</strong>, <strong>Go</strong></li>
+<li>Languages (human): <strong>Spanish</strong></li>
+<li><strong>Teaching</strong> peers and young students.</li>
+</ul>
+<h4 id="its-been-a-while-but-i-could-pick-it-back-up">It’s been a while, but I could pick it back up:</h4>
+<ul>
+<li>Languages (computer): <strong>C</strong>, <strong>C++</strong>, <strong>Java</strong>, <strong>Ruby</strong> (on or off Rails), <strong>Perl</strong>, <strong>Lisp</strong></li>
+<li>Languages (human): <strong>French</strong>, <strong>Hindi</strong>, <strong>Bengali</strong></li>
+</ul>
+<h2 id="education">Education</h2>
+<h3 id="university-of-virginia-dept-of-computer-science">University of Virginia, Dept of Computer Science</h3>
+<h4 id="ms-in-computer-science---jan-2008">M.S. in Computer Science - Jan 2008</h4>
+<p>Thesis: <strong>“Color CT: Capturing Energy Dependence in CT Scans”</strong><br>Publications: Williams, Daniel, et al. <strong>&quot;A cross-layer approach to heterogeneity and reliability.&quot;</strong> <em>Proceedings of the 7th IEEE/ACM international conference on Formal Methods and Models for Codesign.</em> IEEE Press, 2009.</p>
+<h3 id="university-of-virginia-school-of-engineering--applied-science">University of Virginia, School of Engineering &amp; Applied Science</h3>
+<h4 id="bs-with-honors-in-computer-science---may-2005br-also-completed-requirements-for-ba-in-cognitive-science">B.S. with Honors in Computer Science - May 2005<br/> Also completed requirements for B.A. in Cognitive Science</h4>
+<p>Thesis: <strong>“NJTopol: Adding Topology to Parallelized Neural Simulation”</strong><br>Publications: Levy, William B., et al. <strong>&quot;The formation of neural codes in the hippocampus: trace conditioning as a prototypical paradigm for studying the random recoding hypothesis.&quot;</strong> <em>Biological cybernetics</em> 92.6 (2005): 409-426.</p>
 	<script>
 	let body = document.getElementsByTagName('body')[0];
 	if (window.matchMedia("screen and (prefers-color-scheme: dark)").matches) {
