Make the dark mode toggle not follow link.
Github HTML [review tries to follow the raw link, and that causes breakage. Add event.preventDefault() to the link handler.

--- a/template.html
+++ b/template.html
@@ -283,7 +283,8 @@
 		body.classList.add("dark");
 	}
 
-	function toggleDark() {
+	function toggleDark(event) {
+		event.preventDefault();
 		body.classList.toggle("dark");
 	}
 
