Update content again.

--- a/template.html
+++ b/template.html
@@ -223,19 +223,19 @@
 </li>
 </ul>
 <h2 id="volunteeringservice">Volunteering/Service</h2>
-<h3 id="cssigoogle">CSSI@Google</h3>
-<p><a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive course in programming for rising college freshman the summer before they start college. Students are primarily from groups underrepresented in tech. In the last week of the course, students design, implement, and present their own web app.</p>
+<h3 id="cssigoogle-lax">CSSI@Google LAX</h3>
+<p><a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive programming course in programming for rising college freshman, culminating in students designing, implementing, and building their own web app. Students are primarily from groups underrepresented in tech.</p>
 <h4 id="co-lead-instructor---summer-20182019">Co-Lead Instructor - Summer 2018/2019</h4>
 <ul>
-<li><strong>Ran Google L.A.&#39;s CSSI instruction</strong>, along with my co-lead.<ul>
-<li><strong>Planned and delivered lessons</strong> on both technical topics and life skills, including detailed instruction on Python, ad hoc breakout sessions, growth vs. fixed mindset, reviews, and custom labs beyond the standard CSSI curriculum to adapt to the students&#39; needs.</li>
-<li><strong>Recruited a diverse team of module instructors and TAs</strong> from the other engineers in the office, so that the students would see themselves reflected in their instructors.</li>
+<li><strong>Ran Google L.A.&#39;s CSSI instruction</strong> for two summers, along with my co-lead.<ul>
+<li><strong>Planned and delivered lessons</strong> including Python lessons, ad hoc breakout sessions, and custom labs as well as life skills like growth mindset, protocols for problem solving.</li>
+<li><strong>Recruited diverse team of module instructors/TAs</strong> from the office, so that the students would see themselves reflected in their instructors.</li>
 <li><strong>Led instructional/pedagogical training</strong> for module instructors and TAs.</li>
 <li>Provided <strong>personalized mentorship</strong> to students.</li>
-<li>Students gave me <strong>4.9/5.0 rating</strong> as an instructor in the end-of-program survey.</li>
 </ul>
 </li>
-<li>In 2019, <strong>100% of our students reported seeing themselves graduating with a CS degree</strong>, <strong>91% reported increased sense of belonging</strong> in the field, and <strong>85% said the program helped prepare them for college</strong>.</li>
+<li>Received <strong>4.9/5.0 instructor rating</strong> from students end-of-program survey.</li>
+<li>In 2019, <strong>91% of students reported increased sense of belonging</strong> in the field, and <strong>85% said the program helped prepare them for college</strong>.</li>
 </ul>
 <h4 id="python-module-instructor---summer-2017">Python Module Instructor - Summer 2017</h4>
 <ul>
