--- a/template.html
+++ b/template.html
@@ -184,27 +184,28 @@
 </ul>
 <h4 id="enterprise-data-storage---individual-contributor---2014---present">Enterprise Data Storage - Individual Contributor - (2014 - Present)</h4>
 <ul>
-<li>Migrated XX,000 long-term storage images from deprecated tape system onto cloud storage, including integrity checking and modifying the in-house-built backups management system.</li>
-<li>Worked on tooling to manage a fleet of several hundred NetApp filers, providing more SRE-like control planes. (In our experience, the tooling for NetApps was designed for pets, we needed cattle.)</li>
+<li><strong>Migrated XX,000 long-term storage images</strong> from deprecated tape system onto cloud storage, including integrity checking and modifying our backups management software.</li>
+<li>Worked on tooling to <strong>manage a fleet of several hundred NetApp filers, providing more SRE-like control planes</strong>. (We needed cattle, NetApp designed pets.)</li>
 </ul>
 <h4 id="enterprise-monitoring---individual-contributor">Enterprise Monitoring - Individual Contributor</h4>
 <ul>
-<li>Managed full monitoring infrastructure for Google’s internal (“corp”) systems. Because monitoring was a hard dependency of critical infrastructure like internal DNS, DHCP, and auth, this required an incredibly resilient system, adapting tooling designed for the Google production stack to run on standard Linux servers on the corporate network, both in data centers and offices.</li>
-<li>Replaced previous, high-toil on-prem system management with automatic workload scheduling. (Think proto-containerization on Linux VMs with specialized workloads.)</li>
-<li>Managed project to increase isolation between different customers&#39; monitoring by sharding workloads that were combined into a single physical server onto smaller virtual machines, where scheduling could be performed based on configured resource constraints.</li>
-<li>Established a set of standard system configuration best practices applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.</li>
+<li><strong>Managed monitoring infrastructure</strong> for Google’s internal (“corp”) systems. (As a hard dependency of critical infrastructure our availability SLOs had to be greater than any dependent system like internal DNS, DHCP, auth, etc.)</li>
+<li><strong>Adapted tooling designed for the Google production stack</strong> to run on standard Linux servers both in data centers and offices.</li>
+<li><strong>Replaced previous, high-toil on-prem system management</strong> with automatic workload scheduling. (Think proto-containerization with Linux VMs for specialized workloads.)</li>
+<li>Lead on <strong>increasing isolation between different customers&#39;</strong> monitoring by sharding workloads from one single physical server onto smaller VMs, with scheduling based on configured resource constraints.</li>
+<li>Established <strong>standard system configuration best practices</strong> applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.</li>
 </ul>
 <h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom">Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com</h4>
 <ul>
-<li>Managed all domain-wide policies for Google&#39;s own GSuite domain, including:<ul>
-<li>User status/password sync from the various systems of record.</li>
-<li>Synchronization of IP whitelist based on internal network configuration.</li>
-<li>Group/policy synchronization.</li>
+<li><strong>Managed all domain-wide policies</strong> for Google&#39;s own GSuite domain, including:<ul>
+<li><strong>User status/password sync</strong> from the various systems of record.</li>
+<li>Populating <strong>IP whitelist by digesting internals network configs</strong>.</li>
+<li><strong>Group/policy synchronization.</strong></li>
 </ul>
 </li>
-<li>Set policy for access to former user data, in line with established privacy/authorization practices within the company.</li>
-<li>Maintained and improved internal tool providing delegated, logged administrative access to internal helpdesk, including managing quota and access to orphaned data.</li>
-<li>Met in person with various GSuite teams (Calendar, Admin Console, Gmail, Docs, etc.) PMs to provide feedback on missing features and requirements for enterprise use cases, and helped steer roadmaps.</li>
+<li><strong>Set policy for access to former user data</strong>, in line with established privacy/authorization practices within the company.</li>
+<li><strong>Maintained internal tool for providing delegated, logged administrative access</strong> to internal helpdesk, including managing quota and access to orphaned data.</li>
+<li><strong>Met in person with various GSuite teams</strong> (Calendar, Admin Console, Gmail, Docs, etc.) PMs to <strong>provide feedback on missing features and requirements for enterprise</strong> use cases, helping steer roadmaps.</li>
 <li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature&#39;s roll out. For this work, I received an <strong>OC Award Honorable Mention</strong>.</li>
 </ul>
 <h4 id="single-sign-on-sre-tech-lead-team-of-1">Single Sign-On SRE &quot;Tech Lead&quot; (Team of 1)</h4>
@@ -234,7 +235,7 @@
 <li>Provided <strong>personalized mentorship</strong> to students.</li>
 </ul>
 </li>
-<li>Received <strong>4.9/5.0 instructor rating</strong> from students end-of-program survey.</li>
+<li>Received <strong>4.9/5.0 instructor rating</strong> from students end-of-program survey, as well as the <strong>Google LAX Citizenship Award</strong> and <strong>Google Connect Impact Award</strong>.</li>
 <li>In 2019, <strong>91% of students reported increased sense of belonging</strong> in the field, and <strong>85% said the program helped prepare them for college</strong>.</li>
 </ul>
 <h4 id="python-module-instructor---summer-2017">Python Module Instructor - Summer 2017</h4>
@@ -277,6 +278,7 @@
 <h3 id="university-of-virginia-school-of-engineering--applied-science">University of Virginia, School of Engineering &amp; Applied Science</h3>
 <h4 id="bs-with-honors-in-computer-science---may-2005br-also-completed-requirements-for-ba-in-cognitive-science">B.S. with Honors in Computer Science - May 2005<br/> Also completed requirements for B.A. in Cognitive Science</h4>
 <p>Thesis: <strong>“NJTopol: Adding Topology to Parallelized Neural Simulation”</strong><br>Publications: Levy, William B., et al. <strong>&quot;The formation of neural codes in the hippocampus: trace conditioning as a prototypical paradigm for studying the random recoding hypothesis.&quot;</strong> <em>Biological cybernetics</em> 92.6 (2005): 409-426.</p>
+
 	<script>
 	let body = document.getElementsByTagName('body')[0];
 	if (window.matchMedia("screen and (prefers-color-scheme: dark)").matches) {
