--- a/template.html
+++ b/template.html
@@ -166,8 +166,8 @@
 <h1 id="aprotim-sanyal">Aprotim Sanyal</h1>
 <p><a href="mailto:jobs@aprotim.com">jobs@aprotim.com</a><br>(310) 243-6230</p>
 <h2 id="employment">Employment</h2>
-<h3 id="google-inc---site-reliability-engineer---february-2008---present">Google, Inc. - <em>Site Reliability Engineer - February 2008 - Present</em></h3>
-<h4 id="backups-tech-lead---enterprise-data-storage---2017-present">Backups Tech Lead - Enterprise Data Storage - (2017-Present)</h4>
+<h3 id="google-inc---site-reliability-engineer---february-2008---present">Google, Inc. - <strong>Site Reliability Engineer</strong> - <em>February 2008 - Present</em></h3>
+<h4 id="backups-tech-lead---enterprise-data-storage---2017-present">Backups Tech Lead - Enterprise Data Storage - <em>(2017-Present)</em></h4>
 <ul>
 <li><strong>Designed Google’s next gen internal backup tool</strong> from the ground up.<ul>
 <li>Built on <strong>Google Cloud Platform</strong> to manage provisioning of storage, storage class migration, data retention, authentication/authorization, key escrow, and encryption.</li>
@@ -182,20 +182,20 @@
 </ul>
 </li>
 </ul>
-<h4 id="enterprise-data-storage---individual-contributor---2014---present">Enterprise Data Storage - Individual Contributor - (2014 - Present)</h4>
+<h4 id="enterprise-data-storage---individual-contributor---2014---present">Enterprise Data Storage - Individual Contributor - <em>(2014 - Present)</em></h4>
 <ul>
 <li><strong>Migrated XX,000 long-term storage images</strong> from deprecated tape system onto cloud storage, including integrity checking and modifying our backups management software.</li>
-<li>Worked on tooling to <strong>manage a fleet of several hundred NetApp filers, providing more SRE-like control planes</strong>. (We needed cattle, NetApp designed pets.)</li>
+<li>Worked on tooling to <strong>manage a fleet of several hundred NetApp filers, providing more SRE-like control planes</strong>. <em>(We needed cattle, NetApp designed pets.)</em></li>
 </ul>
-<h4 id="enterprise-monitoring---individual-contributor">Enterprise Monitoring - Individual Contributor</h4>
+<h4 id="enterprise-monitoring---individual-contributor-2010---2014">Enterprise Monitoring - Individual Contributor <em>(2010 - 2014)</em></h4>
 <ul>
 <li><strong>Managed monitoring infrastructure</strong> for Google’s internal (“corp”) systems. (As a hard dependency of critical infrastructure our availability SLOs had to be greater than any dependent system like internal DNS, DHCP, auth, etc.)</li>
 <li><strong>Adapted tooling designed for the Google production stack</strong> to run on standard Linux servers both in data centers and offices.</li>
-<li><strong>Replaced previous, high-toil on-prem system management</strong> with automatic workload scheduling. (Think proto-containerization with Linux VMs for specialized workloads.)</li>
+<li><strong>Replaced previous, high-toil on-prem system management</strong> with automatic workload scheduling. <em>(Think proto-containerization with Linux VMs for specialized workloads.)</em></li>
 <li>Lead on <strong>increasing isolation between different customers&#39;</strong> monitoring by sharding workloads from one single physical server onto smaller VMs, with scheduling based on configured resource constraints.</li>
 <li>Established <strong>standard system configuration best practices</strong> applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.</li>
 </ul>
-<h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom">Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com</h4>
+<h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom-2008---2010">Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com <em>(2008 - 2010)</em></h4>
 <ul>
 <li><strong>Managed all domain-wide policies</strong> for Google&#39;s own GSuite domain, including:<ul>
 <li><strong>User status/password sync</strong> from the various systems of record.</li>
@@ -208,11 +208,11 @@
 <li><strong>Met in person with various GSuite teams</strong> (Calendar, Admin Console, Gmail, Docs, etc.) PMs to <strong>provide feedback on missing features and requirements for enterprise</strong> use cases, helping steer roadmaps.</li>
 <li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature&#39;s roll out. For this work, I received an <strong>OC Award Honorable Mention</strong>.</li>
 </ul>
-<h4 id="single-sign-on-sre-tech-lead-team-of-1">Single Sign-On SRE &quot;Tech Lead&quot; (Team of 1)</h4>
+<h4 id="single-sign-on-sre-tech-lead-team-of-1-2008---2010">Single Sign-On SRE &quot;Tech Lead&quot; (Team of 1) <em>(2008 - 2010)</em></h4>
 <ul>
 <li>Provided SRE support for Google&#39;s in-house SSO system, including monitoring, alerting, and deployment support.</li>
 </ul>
-<h3 id="google-inc---sysops-intern---june-2006---august-2006">Google Inc. - <em>Sysops Intern</em> - June 2006 - August 2006</h3>
+<h3 id="google-inc---sysops-intern---june-2006---august-2006">Google Inc. - <strong>Sysops Intern</strong> - <em>June 2006 - August 2006</em></h3>
 <ul>
 <li><strong>Migrated Googler Calendars from Oracle Calendar to Google Calendar</strong><ul>
 <li>In advance of Google&#39;s initial release of Google Calendar for enterprise and to aid with internal dogfooding, I wrote all the tools to export all employee calendar data from Oracle Calendar and import it into Google Calendar.</li>
@@ -278,7 +278,6 @@
 <h3 id="university-of-virginia-school-of-engineering--applied-science">University of Virginia, School of Engineering &amp; Applied Science</h3>
 <h4 id="bs-with-honors-in-computer-science---may-2005br-also-completed-requirements-for-ba-in-cognitive-science">B.S. with Honors in Computer Science - May 2005<br/> Also completed requirements for B.A. in Cognitive Science</h4>
 <p>Thesis: <strong>“NJTopol: Adding Topology to Parallelized Neural Simulation”</strong><br>Publications: Levy, William B., et al. <strong>&quot;The formation of neural codes in the hippocampus: trace conditioning as a prototypical paradigm for studying the random recoding hypothesis.&quot;</strong> <em>Biological cybernetics</em> 92.6 (2005): 409-426.</p>
-
 	<script>
 	let body = document.getElementsByTagName('body')[0];
 	if (window.matchMedia("screen and (prefers-color-scheme: dark)").matches) {
