--- a/template.html
+++ b/template.html
@@ -195,9 +195,9 @@
 <ul>
 <li><strong>Managed monitoring infrastructure</strong> for Google’s internal (“corp”) systems. (As a hard dependency of critical infrastructure our availability SLOs had to be greater than any dependent system like internal DNS, DHCP, auth, etc.)</li>
 <li><strong>Adapted tooling designed for the Google production stack</strong> to run on standard Linux servers both in data centers and offices.</li>
-<li><strong>Replaced previous, high-toil on-prem system management</strong> with automatic workload scheduling. <em>(Think proto-containerization with Linux VMs for specialized workloads.)</em></li>
-<li>Lead on <strong>increasing isolation between different customers&#39;</strong> monitoring by sharding workloads from one single physical server onto smaller VMs, with scheduling based on configured resource constraints.</li>
-<li>Established <strong>standard system configuration best practices</strong> applied uniformly across our 500+ servers (VMs and bare metal) across multiple services.</li>
+<li><strong>Replaced previous, high-toil on-prem system management</strong> with automatic workload scheduling. <em>(Think proto-containerization with Linux VMs and specialized workloads.)</em></li>
+<li>Lead on <strong>isolating different customers&#39; monitoring</strong> by sharding workloads from large, shared physical servers onto small VMs, with scheduling based on configured resource constraints.</li>
+<li>Established <strong>standard system configuration best practices</strong> applied uniformly across 500+ servers and multiple services.</li>
 </ul>
 <h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom-2008---2010">Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com <em>(2008 - 2010)</em></h4>
 <ul>
@@ -245,11 +245,6 @@
 <h4 id="python-module-instructor---summer-2017">Python Module Instructor - Summer 2017</h4>
 <ul>
 <li><strong>Planned and taught</strong> two full-day (9am-6pm) lessons on Python to the students, as well TAing frequently.</li>
-</ul>
-<h3 id="meals-on-wheels">Meals on Wheels</h3>
-<h4 id="delivery-driver-2011-2018">Delivery Driver 2011-2018</h4>
-<ul>
-<li>Delivered meals to those with mobility once every seven weeks.</li>
 </ul>
 <h2 id="skills">Skills</h2>
 <h4 id="expert-in">Expert in:</h4>
