--- a/template.html
+++ b/template.html
@@ -175,6 +175,10 @@
 <p><a href="mailto:jobs@aprotim.com">jobs@aprotim.com</a><br>(310) 243-6230</p>
 <h2 id="employment">Employment</h2>
 <h3 id="google-inc---site-reliability-engineer---february-2008---present">Google, Inc. - <strong>Site Reliability Engineer</strong> - <em>February 2008 - Present</em></h3>
+<p>Across my entire tenure as a Google SRE, I&#39;ve built and run parts of Google&#39;s enterprise infrastructure using combinations
+of open source tools on vanilla-ish Linux, proprietary third-party platforms, Google&#39;s production infrastructure, and Google
+Cloud Platform. I&#39;ve carried oncall pagera with 5-minute and 30-minute response SLAs. I have worked to reduce and automate
+away toil and help my teams build tools and procedures to do the same.</p>
 <h4 id="backups-tech-lead---enterprise-data-storage---2017-present">Backups Tech Lead - Enterprise Data Storage - <em>(2017-Present)</em></h4>
 <ul>
 <li><strong>Designed Google’s next gen internal backup tool</strong> from the ground up.<ul>
@@ -234,7 +238,7 @@
 <h2 id="volunteeringservice">Volunteering/Service</h2>
 <h3 id="cssigoogle-lax">CSSI@Google LAX</h3>
 <p><a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive programming course in programming for rising college freshman, culminating in students designing, implementing, and building their own web app. Students are primarily from groups underrepresented in tech.</p>
-<h4 id="co-lead-instructor---summer-20182019">Co-Lead Instructor - Summer 2018/2019</h4>
+<h4 id="co-lead-instructor---summer-2018-and-2019">Co-Lead Instructor - Summer 2018 and 2019</h4>
 <ul>
 <li><strong>Ran Google L.A.&#39;s CSSI instruction</strong> for two summers, along with my co-lead.<ul>
 <li><strong>Planned and delivered lessons</strong> including Python lessons, ad hoc breakout sessions, and custom labs as well as life skills like growth mindset, protocols for problem solving.</li>
