--- a/template.html
+++ b/template.html
@@ -175,10 +175,9 @@
 <p><a href="mailto:jobs@aprotim.com">jobs@aprotim.com</a><br>(310) 243-6230</p>
 <h2 id="employment">Employment</h2>
 <h3 id="google-inc---site-reliability-engineer---february-2008---present">Google, Inc. - <strong>Site Reliability Engineer</strong> - <em>February 2008 - Present</em></h3>
-<p>Across my entire tenure as a Google SRE, I&#39;ve built and run parts of Google&#39;s enterprise infrastructure using combinations
-of open source tools on vanilla-ish Linux, proprietary third-party platforms, Google&#39;s production infrastructure, and Google
-Cloud Platform. I&#39;ve carried oncall pagera with 5-minute and 30-minute response SLAs. I have worked to reduce and automate
-away toil and help my teams build tools and procedures to do the same.</p>
+<p>During tenure as an SRE, I&#39;ve built and run Google enterprise infrastructure using open source tools on vanilla-ish Linux,
+proprietary third-party platforms, Google&#39;s production infrastructure, and Google Cloud Platform; I&#39;ve carried oncall pagers
+with 5-minute and 30-minute response SLAs; and I&#39;ve built tools and processes to reduce and automate away toil.</p>
 <h4 id="backups-tech-lead---enterprise-data-storage---2017-present">Backups Tech Lead - Enterprise Data Storage - <em>(2017-Present)</em></h4>
 <ul>
 <li><strong>Designed Google’s next gen internal backup tool</strong> from the ground up.<ul>
