--- a/template.html
+++ b/template.html
@@ -196,7 +196,14 @@
       p {
       	margin: 0;
       }
+      
+      #color_toggle_text::before {
+        content:'\263E';
+      }
 
+      .dark #color_toggle_text::before {
+        content:'\2600';
+      }
     </style>
     <title></title>
   </head>
@@ -209,7 +216,7 @@
           Fonts: <a href="https://fonts.google.com/specimen/Inconsolata">Inconsolata</a> and <a href="https://fonts.google.com/specimen/Source+Sans+Pro">Source Sans Pro</a>
         </div>  
       </div>
-      <div><a href="#" onclick="toggleDark(); return false;">Toggle Dark Mode</a></div>
+      <div><a href="#" onclick="toggleDark(); return false;"><span id="color_toggle_text">Toggle Dark Mode</span></a></div>
     </div>
     <!-- Start Content -->
     <h1 id="aprotim-sanyal">
@@ -226,7 +233,7 @@
       Google, Inc. - <strong>Site Reliability Engineer</strong> - <em>February 2008 - Present</em>
     </h3>
     <p>
-      During tenure as an SRE, I've built and run Google enterprise infrastructure using open source tools on vanilla-ish Linux, proprietary third-party platforms, Google's production infrastructure, and Google Cloud Platform; I've carried oncall pagers with 5-minute and 30-minute response SLAs; and I've built tools and processes to reduce and automate away toil.
+      During my tenure as an SRE, I've built and run Google enterprise infrastructure using open source tools on vanilla-ish Linux, proprietary third-party platforms, Google's production infrastructure, and Google Cloud Platform; I've carried oncall pagers with 5-minute and 30-minute response SLAs; and I've built tools and processes to reduce and automate away toil.
     </p>
     <h4 id="backups-tech-lead---enterprise-data-storage---2017-present">
       Backups Tech Lead - Enterprise Data Storage - <em>(2017-Present)</em>
