Fix h4 italics, make dates consistently punctuated.

--- a/template.html
+++ b/template.html
@@ -111,7 +111,7 @@
       em, i {
       	color: var(--secondary-color);
       }
-      h1 em, h1 i, h2 em, h2 i, h3 em, h3 i {
+      h1 em, h1 i, h2 em, h2 i, h3 em, h3 i, h4 em, h4 i {
       	color: var(--bolder-color);
       }
       body {
@@ -276,8 +276,8 @@
       <li>Worked on tooling to <strong>manage a fleet of several hundred NetApp filers, providing more SRE-like control planes</strong>. <em>(We needed cattle, NetApp designed pets.)</em>
       </li>
     </ul>
-    <h4 id="enterprise-monitoring---individual-contributor-2010---2014">
-      Enterprise Monitoring - Individual Contributor <em>(2010 - 2014)</em>
+    <h4 id="enterprise-monitoring---individual-contributor---2010---2014">
+      Enterprise Monitoring - Individual Contributor - <em>(2010 - 2014)</em>
     </h4>
     <ul>
       <li>
@@ -294,8 +294,8 @@
       <li>Established <strong>standard system configuration best practices</strong> applied uniformly across 500+ servers and multiple services.
       </li>
     </ul>
-    <h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom-2008---2010">
-      Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com <em>(2008 - 2010)</em>
+    <h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom---2008---2010">
+      Google Apps for Your Domain (Now GSuite) Administrator Lead for google.com - <em>(2008 - 2010)</em>
     </h4>
     <ul>
       <li>
@@ -323,8 +323,8 @@
       <li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature's roll out. For this work, I received an <strong>OC Award Honorable Mention</strong>.
       </li>
     </ul>
-    <h4 id="single-sign-on-sre-tech-lead-team-of-1-2008---2010">
-      Single Sign-On SRE "Tech Lead" (Team of 1) <em>(2008 - 2010)</em>
+    <h4 id="single-sign-on-sre-tech-lead-team-of-1---2008---2010">
+      Single Sign-On SRE "Tech Lead" (Team of 1) - <em>(2008 - 2010)</em>
     </h4>
     <ul>
       <li>Provided SRE support for Google's in-house SSO system, including monitoring, alerting, and deployment support.
