--- a/template.html
+++ b/template.html
@@ -281,7 +281,7 @@
     </h4>
     <ul>
       <li>
-        <strong>Managed monitoring infrastructure</strong> for Google’s internal (“corp”) systems. (As a hard dependency of critical infrastructure our availability SLOs had to be greater than any dependent system like internal DNS, DHCP, auth, etc.)
+        <strong>Managed monitoring infrastructure</strong> for Google’s internal (“corp”) systems. (As a hard dependency of critical infrastructure our availability SLOs had to be greater than any dependent system like DNS, DHCP, auth, etc.)
       </li>
       <li>
         <strong>Adapted tooling designed for the Google production stack</strong> to run on standard Linux servers both in data centers and offices.
@@ -291,7 +291,7 @@
       </li>
       <li>Lead on <strong>isolating different customers' monitoring</strong> by sharding workloads from large, shared physical servers onto small VMs, with scheduling based on configured resource constraints.
       </li>
-      <li>Established <strong>standard system configuration best practices</strong> applied uniformly across 500+ servers and multiple services.
+      <li>Established <strong>standard system configuration best practices</strong> applied across 500+ servers and all team services.
       </li>
     </ul>
     <h4 id="google-apps-for-your-domain-now-gsuite-administrator-lead-for-googlecom---2008---2010">
@@ -312,7 +312,7 @@
         </ul>
       </li>
       <li>
-        <strong>Set policy for access to former user data</strong>, in line with established privacy/authorization practices within the company.
+        <strong>Set policy for access to former user data</strong>, in line with established Google privacy/authorization practices.
       </li>
       <li>
         <strong>Maintained internal tool for providing delegated, logged administrative access</strong> to internal helpdesk, including managing quota and access to orphaned data.
@@ -320,7 +320,7 @@
       <li>
         <strong>Met in person with various GSuite teams</strong> (Calendar, Admin Console, Gmail, Docs, etc.) PMs to <strong>provide feedback on missing features and requirements for enterprise</strong> use cases, helping steer roadmaps.
       </li>
-      <li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature's roll out. For this work, I received an <strong>OC Award Honorable Mention</strong>.
+      <li>Worked with GSuite team to <strong>roll out Google multi-login</strong>, including both managing the google.com domain changes and consulting on requirements for the feature's roll out. Received an <strong>OC Award Honorable Mention</strong>.
       </li>
     </ul>
     <h4 id="single-sign-on-sre-tech-lead-team-of-1---2008---2010">
@@ -356,7 +356,7 @@
       CSSI@Google LAX
     </h3>
     <p>
-      <a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive programming course in programming for rising college freshman, culminating in students designing, implementing, and building their own web app. Students are primarily from groups underrepresented in tech.
+      <a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute/">CSSI</a> is a three-week intensive programming course for rising college freshman, primarily from groups underrepresented in tech. It culminates in students designing, implementing, and building their own web app.
     </p>
     <h4 id="co-lead-instructor---summer-2018-and-2019">
       Co-Lead Instructor - Summer 2018 and 2019
