--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
   "width=device-width, initial-scale=1">
   <style type="text/css">
 
-      @import url('https://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+3&display=swap');
       :root {
         --base03: #002b36;
         --base02: #073642;
@@ -119,7 +119,7 @@
       body {
         color: var(--bold-color);
         font-size: 10pt;
-        font-family: 'Source Sans Pro', sans-serif;
+        font-family: 'Source Sans 3', sans-serif;
         font-style: normal;
         background-color: var(--bgcolor);
       }
@@ -216,15 +216,15 @@
       "toggleDropdown('#credits'); return false;">Credits</a>
       <div class="dropdown" id="credits">
         Content, HTML, CSS, and Javascript (c) Aprotim Sanyal,
-        2019.<br>
+        2024.<br>
         <a href=
         "https://ethanschoonover.com/solarized/">Solarized</a>
         color schemes by Ethan Schoonover<br>
         Fonts: <a href=
         "https://fonts.google.com/specimen/Inconsolata">Inconsolata</a>
         and <a href=
-        "https://fonts.google.com/specimen/Source+Sans+Pro">Source
-        Sans Pro</a>
+        "https://fonts.google.com/specimen/Source+Sans+3">Source
+        Sans 3</a>
       </div>
     </div>
     <div>
